<resources>
    <string name="app_name">Ceki Note</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tab_score">Manage Score</string>
    <string name="tab_history">History Game</string>
    <string name="tab_detail">Detail Game</string>

    <string name="page_title_list_game">List Game</string>
    <string name="page_title_list_game_selected">%1$d Selected</string>
    <string name="page_title_create_game">Create New Game</string>
    <string name="page_title_detail_game">Detail Game #%1$d</string>

    <string-array name="detail_game_active">
        <item>@string/tab_score</item>
        <item>@string/tab_history</item>
    </string-array>

    <string-array name="detail_game_finish">
        <item>@string/tab_history</item>
    </string-array>

    <string name="title_player_data">Player Data</string>
    <string name="title_player_score">Player Score</string>
    <string name="title_game_data">Game Data</string>
    <string name="title_score">Score</string>
    <string name="title_score_format">Score %1$s</string>
    <string name="title_select_player">Select Player %1$d</string>
    <string name="title_create_player">Create New Player For Player %1$d</string>
    <string name="hint_location">Location</string>
    <string name="player_number_1">1. Player</string>
    <string name="player_number_2">2. Player</string>
    <string name="player_number_3">3. Player</string>
    <string name="player_number_4">4. Player</string>
    <string name="text_player">Player</string>
    <string name="text_player_name">Player Name</string>
    <string name="text_total">Total</string>
    <string name="text_number_abstract" translatable="false">#</string>
    <string name="text_value_abstract" translatable="false">-</string>
    <string name="text_hint_selected_logo">Selected Logo</string>
    <string name="player_number_format">%1$d. %2$s</string>
    <string name="text_number_game_default" translatable="false">#0</string>
    <string name="text_number_game_format" translatable="false">#%1$d</string>
    <string name="text_location_game_format" translatable="false">at %1$s</string>
    <string name="error_player_name_exist">Can`t create player with name %1$s, player with that name is already exist.</string>

    <string name="menu_list_game">@string/page_title_list_game</string>
    <string name="menu_other">Other</string>
    <string name="menu_source">Source</string>
    <string name="menu_check_update">Check Update</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_end_game">End Game</string>
    <string name="menu_add_player">Add New&#8230;</string>

    <string name="natice_complete_select_player">You must complete all the player data to create the game</string>
    <string name="natice_complete_score_player">Complete all player score to add the score to the game</string>

    <string name="shortcut_create_game_label_short">Create</string>
    <string name="shortcut_create_game_label_long">Create New Game</string>
    <string name="shortcut_create_game_label_disable">Create New Game Disabled</string>
</resources>
