<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ngengs.android.cekinote.fragment.ManageScoreFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/title_player_score"
                android:textSize="@dimen/text_size_small" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin_small"
                android:background="#FFF"
                app:elevation="1dp"
                card_view:cardCornerRadius="0.1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#FFF"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layout_manage_score_player1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/name_manage_score_player1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_player" />

                        <TextView
                            android:id="@+id/score_manage_score_player1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/text_value_abstract"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_height"
                        android:background="@color/colorSeparator" />

                    <LinearLayout
                        android:id="@+id/layout_manage_score_player2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/name_manage_score_player2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_player" />

                        <TextView
                            android:id="@+id/score_manage_score_player2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/text_value_abstract"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_height"
                        android:background="@color/colorSeparator" />

                    <LinearLayout
                        android:id="@+id/layout_manage_score_player3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/name_manage_score_player3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_player" />

                        <TextView
                            android:id="@+id/score_manage_score_player3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/text_value_abstract"
                            android:textAlignment="textEnd" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/separator_height"
                        android:background="@color/colorSeparator" />

                    <LinearLayout
                        android:id="@+id/layout_manage_score_player4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/activity_vertical_margin"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/name_manage_score_player4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/text_player" />

                        <TextView
                            android:id="@+id/score_manage_score_player4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_weight="1"
                            android:text="@string/text_value_abstract"
                            android:textAlignment="textEnd" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/score_manage_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:tint="#FFF"
        app:srcCompat="@drawable/ic_mode_edit" />

</android.support.design.widget.CoordinatorLayout>
